# Lab

ЛР-2-2-сдача/: CMakeLists.txt  GenFunc.h  main.c  task 1.h  task 2.c  task 2.h
Лабораторная работа №1-2/: CMakeLists.txt  func 1.h  func.c  func.h  main.c  task 1.c  task 2.c  task 2.h  task 3.c  task 3.h
Лабораторная работа №1/Задание 1. Задача 12/: FileName.c  Project1.sln  Project1.vcxproj
Лабораторная работа №1/Задание 2. Задача 11/: FileName.c  Задание 2. Задача 11.sln  Задание 2. Задача 11.vcxproj
Лабораторная работа №1/Задание 3. Задача 12/: FileName.c
Лабораторная работа №2-2/: GenFunc.c  task 1.c
Лабораторная работа №2/Задание 1. Задача 2 +/: FileName.c  Задание 1. Задача 2.sln  Задание 1. Задача 2.vcxproj
Лабораторная работа №2/Задание 2. Задача 12 +/: FileName.c
Лабораторная работа №3/Ex1-3/: Ex1-3.sln  Ex1-3.vcxproj  FileName.c
Лабораторная работа №3/Ex2-15/: Ex2-15.sln  Ex2-15.vcxproj  FileName.c
Лабораторная работа №3/Ex3-7/: Ex3-7.sln  Ex3-7.vcxproj  FileName.c
Лабораторная работа №4/Ex1-13/: Ex1-13.sln  Ex1-13.vcxproj  FileName.c
Лабораторная работа №4/Ex2-1/: Ex2-1.sln  Ex2-1.vcxproj  FileName.c
Лабораторная работа №6/Ex1-7/: CMakeLists.txt  Functions.h  arr.c  bigarr.c  buble_sort.c  main.c  merge_sort_posotive_elements.c  output.c  time_manage.c
Лабораторная работа №6/Ex2-3/: CMakeLists.txt  Functions.h  arr.c  input_sort.c  main.c  output.c
Лаботраторная работа №7/: CMakeLists.txt  Merge_Sort.c  NewString.c  longword.c  main.c  task1.c  task1.h  task2.c  task2.h  task3.c  task3.h  taskSelection.c  taskSelection.h
(+96 files in other folders)
